# lazysre

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.cli  README.md  package.json  pyproject.toml
.github/workflows/: npm-pack-check.yml  release-npm.yml
deploy/k8s/: lazysre.yaml
deploy/swarm/: lazysre-stack.yml
scripts/: build_push_cli_registry.sh  build_push_registry.sh  check_npm_release.sh  deploy_remote_k8s.sh  deploy_remote_swarm.sh  deploy_remote_swarm_registry.sh  install_user.sh  release_cli.sh  release_npm.sh  smoke_remote_cli.sh
tests/: test_agent_runtime.py  test_aiops_bridge.py  test_aiops_bridge_api.py  test_aiops_cli.py  test_aiops_ops_api.py  test_aiops_ops_execute_api.py  test_channel_execution_templates.py  test_channel_recipe_command.py  test_channel_show_command.py  test_channel_tail_command.py  test_channel_webhook.py  test_channels.py  test_cli_approval.py  test_cli_brain_memory_context.py  test_cli_chat_commands.py  test_cli_dispatcher.py  test_cli_fix_mode.py  test_cli_llm.py  test_cli_main.py  test_cli_marketplace.py  test_cli_observer_and_session.py  test_cli_policy_center.py  test_cli_postmortem_graph.py  test_cli_remediation_templates.py  test_cli_runbook.py  test_cli_secrets.py  test_cli_skills.py  test_cli_target_profile.py  test_cli_target_profiles.py  test_cli_tool_packs.py  test_cli_verify_artifact.py  test_gemini_provider.py  test_generated_runbook.py  test_incident_store.py  test_kb_cli.py  test_knowledge_store.py  test_platform_service.py  test_preflight_risk.py  test_runbook_preflight_gate.py  test_slo.py  (+4 more)
(+72 files in other folders)
