[project]
name = "lazysre"
version = "0.1.0"
description = "AI-native agent runtime for SRE workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "rich>=13.7.1",
  "typer>=0.12.3",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
lsre = "lazysre.cli.main:main"
lazysre = "lazysre.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"lazysre" = ["web/*.html", "web/*.css", "web/*.js"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
